Added support for orders

--- a/myshop/shop/templates/shop/product/list.html
+++ b/myshop/shop/templates/shop/product/list.html
@@ -34,7 +34,7 @@
                 </a>
                 <a href="{{ product.get_absolute_url }}">{{ product.name }}</a>
                 <br>
-                ${{ product.price }}
+                N{{ product.price }}
             </div>
         {% endfor %}                                                                    
     </div>
